# GG-8242 Need to extract modules: step 1